# Proyecto1_Redes_MCP

./: README.md  pyproject.toml  requirements.txt  server.py
scripts/: run_server.sh
src/futboliq_mcp/: server.py
src/futboliq_mcp/data_providers/: statsbomb.py
src/futboliq_mcp/tools/: analyze_match.py
src/futboliq_mcp/utils/: xt.py
