[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server proyect, of football stats"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.1",
    "multimethod==1.12",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "socceraction[statsbomb]>=1.5.3",
    "statsbombpy>=1.16.0",
]


